--- a/_examples/index.html
+++ b/_examples/index.html
@@ -5,7 +5,6 @@
   <title></title>
 </head>
 <body>
-  <test-riot></test-riot>
-  <script src="test.ts"></script>
+  <script src="./index.ts"></script>
 </body>
 </html>
